# Vorlesung_18.12.2025

./: README.md
cli11_demo/: CMakeLists.txt  input.txt
cli11_demo/src/: main.cpp
fetch_demo/: CMakeLists.txt
fetch_demo/src/: main.cpp
json_demo/: CMakeLists.txt  profile.json
json_demo/src/: main.cpp
my_cmake_library/: CMakeLists.txt
my_cmake_library/include/: mylib.h
my_cmake_library/src/: mylib.cpp
